# async-scope

./: Cargo.toml  README.md
.github/actions/actionlint/: action.yml
.github/workflows/: actionlint.yml  cargo.yml
src/: error.rs  executor.rs  lib.rs  options.rs  scope.rs  stream.rs  util.rs  wrapper.rs
src/stream/: buffer_unordered.rs  buffered.rs  mod.rs  spawn.rs
src/tests/: mod.rs  scope.rs
src/tests/stream/: buffer_unordered.rs  buffered.rs  mod.rs  spawn.rs
src/util/: cell.rs  complete.rs  mod.rs  split_arc.rs  sync.rs  test.rs  tracing.rs  uncontended.rs  variance.rs
tests/: basic.rs  stream.rs
