[package]
name = "async-scope"
version = "0.1.0"
edition = "2021"

[features]
stream = ["dep:futures-core", "dep:futures-channel"]

[dependencies]
concurrent-queue = "2.4.0"
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
pin-project-lite = "0.2.13"

futures-core = { version = "0.3.30", optional = true }
futures-channel = { version = "0.3.30", optional = true }
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.30"
tracing-test = "0.2.4"
tracing = "0.1.40"
assert_matches = "1.5.0"
