[package]
name = "async-scope"
version = "0.1.0"
edition = "2021"

[features]
stream = ["dep:futures-core"]

[dependencies]
concurrent-queue = "2.4.0"
pin-project-lite = "0.2.13"

futures-core = { version = "0.3.30", optional = true }

[dependencies.futures-util]
version = "0.3.30"
default-features = false
features = ["std"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.30"
assert_matches = "1.5.0"
