[package]
name = "async-scope"
version = "0.1.0"
edition = "2021"

[features]
stream = []

[dependencies]
futures-core = { version = "0.3.30", default-features = false }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
futures-channel = { version = "0.3.30", default-features = false, features = ["alloc"] }
pin-project-lite = "0.2.13"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "time", "sync"] }
assert_matches = "1.5.0"

[dev-dependencies.futures]
version = "0.3.30"
default-features = false
features = ["std"]
